force-app/main/default/objects/NHS_Preferred_Agent__c/NHS_Preferred_Agent__c.object-meta.xml
<CustomObject>
    <description>Junction linking a Housebuilder (Account, RT=House_Builder) to a preferred Estate Agent (Account, RT=Estate_Agents). Drives the Preferred Agents tab on the Housebuilder record page.</description>
    <label>Preferred Agent</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Preferred Agent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>