force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date this agent became a preferred partner for the housebuilder.</description>
    <label>Added Date</label>
    <type>Date</type>
</CustomField>