force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Estate_Agent__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Estate Agent Account (Record Type = Estate_Agents) flagged as a preferred partner.</description>
    <label>Estate Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preferred By Housebuilders</relationshipLabel>
    <relationshipName>Preferred_By_Housebuilders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>