force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Housebuilder__c.field-meta.xml
<CustomField>
    <fullName>Housebuilder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Housebuilder Account (Record Type = House Builder) that is naming this agent as preferred.</description>
    <label>Housebuilder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preferred Agents</relationshipLabel>
    <relationshipName>Preferred_Agents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>