force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form reason or context for this preference (e.g. geographic speciality, past performance).</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>