force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Optional ranking — 1 = first choice, 2 = second, etc. Leave blank for unranked preferences.</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>