force-app/main/default/objects/NHS_Preferred_Agent__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Prevents duplicate Housebuilder–Agent pairs. Formula concatenates the two Account Ids.</description>
    <formula>Housebuilder__c &amp; &apos;-&apos; &amp; Estate_Agent__c</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>